--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -389,6 +389,7 @@
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_QMFSSM.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_SHPS.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_WXFW_SJSMWX.css" />
+    <Content Include="Areas\Business\Css\SWFW\SWFW_BX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_CWKJPG.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_FLZX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_GSZC.css" />
@@ -672,6 +673,8 @@
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_SHPSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_WXFW_SJSMWX.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_WXFW_SJSMWXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_BX.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_BXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_CWKJPG.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_CWKJPGYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_FLZX.js" />
@@ -1204,6 +1207,7 @@
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_SHPSController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCWXBYController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_WXFW_SJSMWXController.cs" />
+    <Compile Include="Areas\Business\Controllers\SWFW\SWFW_BXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_CWKJPGController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_FLZXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_GSZCController.cs" />
@@ -1470,6 +1474,7 @@
     <Content Include="Areas\Business\Views\SWFW_SBZL\SWFW_SBZL.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_FLZX\SWFW_FLZX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_CWKJPG\SWFW_CWKJPG.cshtml" />
+    <Content Include="Areas\Business\Views\SWFW_BX\SWFW_BX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
