--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -169,6 +169,7 @@
     <Compile Include="SWFW\ISWFW_GSZCBLL.cs" />
     <Compile Include="SWFW\ISWFW_SBZLBLL.cs" />
     <Compile Include="SWFW\ISWFW_TZDBBLL.cs" />
+    <Compile Include="SWFW\ISWFW_YSBZBLL.cs" />
     <Compile Include="XXYL\IXXYL_DIYSGFBLL.cs" />
     <Compile Include="XXYL\IXXYL_HPGBLL.cs" />
     <Compile Include="XXYL\IXXYL_HWBLL.cs" />
