--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -162,6 +162,7 @@
     <Compile Include="BLL\SWFW\SWFW_GSZCBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_SBZLBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_TZDBBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_YSBZBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
     <Compile Include="BLL\WDXJBLL.cs" />
