--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -393,6 +393,7 @@
     <Content Include="Areas\Business\Css\SWFW\SWFW_CWKJPG.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_FLZX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_GSZC.css" />
+    <Content Include="Areas\Business\Css\SWFW\SWFW_PHZP.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_SBZL.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_TZDB.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_YSBZ.css" />
@@ -683,6 +684,8 @@
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_FLZXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_GSZC.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_GSZCYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_PHZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_PHZPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_SBZL.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_SBZLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_TZDB.js" />
@@ -1217,6 +1220,7 @@
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_CWKJPGController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_FLZXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_GSZCController.cs" />
+    <Compile Include="Areas\Business\Controllers\SWFW\SWFW_PHZPController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_SBZLController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_TZDBController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_YSBZController.cs" />
@@ -1485,6 +1489,7 @@
     <Content Include="Areas\Business\Views\SWFW_BX\SWFW_BX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_TZDB\SWFW_TZDB.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_YSBZ\SWFW_YSBZ.cshtml" />
+    <Content Include="Areas\Business\Views\SWFW_PHZP\SWFW_PHZP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
