--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -160,6 +160,7 @@
     <Compile Include="BLL\SWFW\SWFW_CWKJPGBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_FLZXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_GSZCBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_PHZPBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_SBZLBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_TZDBBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_YSBZBLL.cs" />
