--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -179,11 +179,14 @@
     <Compile Include="Maps\SWFW\SWFW_FLZXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GGCMJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GSZCJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_LPDZJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_PHZPJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_SBZLJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_SJCHJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_TZDBJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_YSBZJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_ZHFWJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_ZKJBXX_Map.cs" />
     <Compile Include="Maps\SZMX_Map.cs" />
     <Compile Include="Maps\BZZX\BZZX_WZJY_Map.cs" />
     <Compile Include="Maps\XQJBXX_Map.cs" />
@@ -345,11 +348,14 @@
     <Compile Include="Models\SWFW\SWFW_FLZXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GGCMJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GSZCJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_LPDZJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_PHZPJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_SBZLJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_SJCHJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_TZDBJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_YSBZJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_ZHFWJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_ZKJBXX.cs" />
     <Compile Include="Models\SZMX.cs" />
     <Compile Include="Models\BZZX\WZYJ.cs" />
     <Compile Include="Models\XQJBXX.cs" />
