--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -166,6 +166,8 @@
     <Compile Include="BLL\SWFW\SWFW_SBZLBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_SJCHBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_TZDBBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_WLBXWHBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_WZJSTGBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_YSBZBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZHFWBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZKBLL.cs" />
