--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Maps\SWFW\SWFW_FLZXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GGCMJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GSZCJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_KDJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_LPDZJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_PHZPJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_SBZLJBXX_Map.cs" />
@@ -189,6 +190,7 @@
     <Compile Include="Maps\SWFW\SWFW_YSBZJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_ZHFWJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_ZKJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_ZXFWJBXX_Map.cs" />
     <Compile Include="Maps\SZMX_Map.cs" />
     <Compile Include="Maps\BZZX\BZZX_WZJY_Map.cs" />
     <Compile Include="Maps\XQJBXX_Map.cs" />
@@ -350,6 +352,7 @@
     <Compile Include="Models\SWFW\SWFW_FLZXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GGCMJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GSZCJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_KDJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_LPDZJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_PHZPJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_SBZLJBXX.cs" />
@@ -360,6 +363,7 @@
     <Compile Include="Models\SWFW\SWFW_YSBZJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_ZHFWJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_ZKJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_ZXFWJBXX.cs" />
     <Compile Include="Models\SZMX.cs" />
     <Compile Include="Models\BZZX\WZYJ.cs" />
     <Compile Include="Models\XQJBXX.cs" />
