--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -161,6 +161,7 @@
     <Compile Include="BLL\SWFW\SWFW_FLZXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_GGCMBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_GSZCBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_KDBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_LPDZBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_PHZPBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_SBZLBLL.cs" />
@@ -171,6 +172,7 @@
     <Compile Include="BLL\SWFW\SWFW_YSBZBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZHFWBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZKBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_ZXFWBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
     <Compile Include="BLL\WDXJBLL.cs" />
