--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -180,6 +180,8 @@
     <Compile Include="Maps\SWFW\SWFW_FYSJJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GGCMJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GSZCJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_HYWLJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_HYZXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_KDJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_LPDZJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_PHZPJBXX_Map.cs" />
@@ -354,6 +356,8 @@
     <Compile Include="Models\SWFW\SWFW_FYSJJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GGCMJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GSZCJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_HYWLJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_HYZXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_KDJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_LPDZJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_PHZPJBXX.cs" />
