--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -395,6 +395,8 @@
     <Content Include="Areas\Business\Css\SWFW\SWFW_FYSJ.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_GGCM.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_GSZC.css" />
+    <Content Include="Areas\Business\Css\SWFW\SWFW_HYWL.css" />
+    <Content Include="Areas\Business\Css\SWFW\SWFW_HYZX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_KD.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_LPDZ.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_PHZP.css" />
@@ -688,6 +690,10 @@
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_WXFW_SJSMWXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_FYSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_FYSJYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYWL.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYWLYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYZX.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYZXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_KD.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_KDYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_ZXFW.js" />
@@ -1252,6 +1258,8 @@
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_FYSJController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_GGCMController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_GSZCController.cs" />
+    <Compile Include="Areas\Business\Controllers\SWFW\SWFW_HYWLController.cs" />
+    <Compile Include="Areas\Business\Controllers\SWFW\SWFW_HYZXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_KDController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_LPDZController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_PHZPController.cs" />
@@ -1540,6 +1548,8 @@
     <Content Include="Areas\Business\Views\SWFW_ZXFW\SWFW_ZXFW.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_KD\SWFW_KD.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_FYSJ\SWFW_FYSJ.cshtml" />
+    <Content Include="Areas\Business\Views\SWFW_HYWL\SWFW_HYWL.cshtml" />
+    <Content Include="Areas\Business\Views\SWFW_HYZX\SWFW_HYZX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
